started work on API layer
